k8s/dev/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-website
  namespace: dev
  labels:
    name: devops-website
    instance: devops-website
spec:
  replicas: 3
  selector:
    matchLabels:
      name: devops-website
      instance: devops-website
  template:
    metadata:
      labels:
        name: devops-website
        instance: devops-website
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: devops-website
          image: docker.registry.local/k8s-project:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
